PostGIS 2.1.0
2013/MM/DD

* New Features *

  - ST_NearestValue, ST_Neighborhood (Bborie Park / UC Davis)
  - ST_Raster2WorldCoord, ST_World2RasterCoord (Bborie Park / UC Davis)
  - Tiger Geocoder - Tiger 2011 loader (Regina Obe / Paragon Corporation) 
    Funded by Hunter Systems Group

* Enhancements *

* Fixes *

PostGIS 2.0.0
2012/04/03
   
* Important / Breaking Changes  *

  - Upgrading to PostGIS 2.0 REQUIRES a dump and restore. See the
    "Hard Upgrade" section of the documentation.
  - Functions deprecated during the 1.X series (mostly non-ST variants)
    have been removed. Update your application to the new signatures.
    If you cannot update your application, see the legacy.sql file
    to enable the old signatures.
  - GEOMETRY_COLUMNS is now a view, not a table. Code that manually
    updates the table must be changed to either use the management
    functions (eg AddGeometryColumn) or the new geometry typmod options
    (eg CREATE TABLE t (g GEOMETRY(Polgyon, 4326)))
  - ST_AsBinary and ST_AsText now return 3D/4D results in ISO SQL/MM
    format when called on 3D/4D features.
  - The "unknonwn SRID" is now 0, not -1. 
    (eg ST_SRID(ST_GeomFromText('POINT(0 0)')) returns 0)
  - ST_NumGeometries returns 1 for singletons. ST_GeometryN returns the 
    the geometry for singletons.
  - probe_geometry_columns(), rename_geometry_table_constraints(),
    fix_geometry_columns(), have been removed since GEOMETRY_COLUMNS
    is now a view.
  - 3D analysis functions are now named with "3D" as a prefix 
    instead of a suffix (eg ST_Length3D has become ST_3DLength)

* New Features *
  
  - KNN Gist index based centroid (<->) and box (<#>) distance 
    operators (Paul Ramsey / funded by Vizzuality)
  - PostgreSQL 9.1+ "extension" support (Regina Obe)
  - Typmod support for geometry (Paul Ramsey)
  - Support for TIN and PolyHedralSurface (Olivier Courtin / Oslandia)
  - Raster support integrated and documented