@@ -12,6 +12,8 @@ PostGIS 2.1.0
 
 * Fixes *
 
+  - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
+
 PostGIS 2.0.0
 2012/04/03
    
